# YOLOv5-LibTorch-Linux

./: CMakeLists.txt  README.md  truck.names
src/: YOLOv5LibTorch.cpp
